--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
-  text-align: center;
+  width: 90%;
+  margin: auto;
+  background-color: lightgoldenrodyellow;
+  padding: 12px;
 }
 
 .App-logo {
@@ -9,8 +12,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #0f0e0f;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
